(Format: Year/Month/Day)
Changes for 0.9.16:
*06/04/18:
   * Fix system tray resize looping/livelock, sf.net bug #1359442 (Simon)
     SystemTray.cc
   * Fix iconbar updates (icon and title)
     (Thanks Mark Tiefenbruck, mark at tiefenbruck dot org)
     WinClient.hh/cc Window.hh/cc IconButton.cc IconbarTool.cc WinButton.cc
*06/04/17:
   * Fix toolbar transparency when autohide enabled (Simon)
     Toolbar.cc Container.hh/cc ToolbarItem.hh/cc *Tool.hh/cc
   * Fix toolbar transparency (frame and empty iconbar) (Simon)
     Container.cc Toolbar.cc
   * Fix display of label for dialog-type boxes (Simon)
     (only when external tabs are enabled, but not for particular window)
     FbWinFrame.cc
   * Fix fbrun position setting (-pos and -nearmouse args) (Simon)
     util/fbrun/... FbRun.hh/cc main.cc
   * Resize the clock if the text gets too big, sf.net patch #1436406
     (thanks Geoff Lywood - glywood at users.sourceforge.net)
     ClockTool.cc
   * Fix some rotated toolbar+textbutton issues (Simon)
     Toolbar.cc IconbarTool.cc FbTk/TextButton.cc
   * Fix /bin/sh portability for fbsetbg and startfluxbox (Simon)
     (fluxbox-generate_menu is seriously broken wrt portability 
     atm though :-/)
     fbsetbg startfluxbox.in
   * Make autogen.sh properly /bin/sh portable (Simon)
     Fixes #1445464
     autogen.sh
   * patchset missed my fbrun -Wall fixes (Simon)
     util/fbrun/FbRun.cc
*06/04/16:
   * Add option to reverse desktop wheeling, patch #1034287
       session.screen0.reversewheeling: true|false
     (thanks Kalle - ice_jkpg at users.sourceforge.net)
     Screen.hh/cc fluxbox.cc Toolbar.cc IconButton.cc
   * Missing space in translation (thanks... anonymous, sf.net #1455024)
     nls/C/Translation.m
   * Set (take|send)to(next|prev)workspace offset default value to 1
     instead of the current 0 (which makes them look non-functional).
     Similarly for tab and (|next|prev|left|right)workspace.
     - Thanks Jonas Koelker (sf.net 1467926)