@@ -1,6 +1,8 @@
 (Format: Year/Month/Day)
 Changes for 0.9.16:
 *06/04/18:
+   * Add new timer ability - interval - to reduce clock update checks (Simon)
+     ClockTool.cc FbTk/Timer.hh/cc
    * Fix system tray resize looping/livelock, sf.net bug #1359442 (Simon)
      SystemTray.cc
    * Fix iconbar updates (icon and title)
